--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Parth Patel, myvs.parth@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
