--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "file-system": "^2.2.2",
+    "mongodb": "^4.4.1",
+    "mongoose": "^6.2.6",
     "nodemailer": "^6.5.0",
     "nodemon": "^2.0.7",
     "socket.io": "^2.2.0"
