--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "file-system": "^2.2.2",
+    "google-dictionary-api": "^1.0.8",
     "mongodb": "^4.4.1",
     "mongoose": "^6.2.6",
     "nodemailer": "^6.5.0",
