--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node JS Socket.io Tic Tac Toe Server",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Parth Patel, myvs.parth@gmail.com",
