--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "1.0.0",
   "description": "Node JS Socket.io Tic Tac Toe Server",
   "main": "index.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dienpham187294/nodejsserverforenglishtool.git"
   },
   "author": "Parth Patel, myvs.parth@gmail.com",
   "license": "ISC",
