--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "node": "14.x"
   },
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dienpham187294/nodejsserverforenglishtool.git"
+    "url": "https://github.com/dienpham187294/nodejsserverforenglishtool.git"
   },
   "author": "Parth Patel, myvs.parth@gmail.com",
   "license": "ISC",
