--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,14 @@
             "src": "index.js",
             "use": "@vercel/node"
         }
+    ],
+    "routes": [
+        {
+            "handle": "filesystem"
+        },
+        {
+            "src": "/.*",
+            "dest": "index.js"
+        }
     ]
 }
